Shove everything in the main instead